--- a/4-natours/after-section-09/package.json
+++ b/4-natours/after-section-09/package.json
@@ -5,20 +5,23 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon server.js",
-    "start:prod": "NODE_ENV=production nodemon server.js",
+    "start:prod": "cross-env NODE_ENV=production nodemon server.js",
     "debug": "ndb server.js"
   },
   "author": "Jonas Schmedtmann",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^7.0.0",
-    "express": "^4.16.4",
-    "mongoose": "^5.5.2",
-    "morgan": "^1.9.1",
-    "slugify": "^1.3.4",
-    "validator": "^10.11.0"
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "mongoose": "^8.10.0",
+    "morgan": "^1.10.0",
+    "ndb": "^1.1.5",
+    "nodemon": "^3.1.9",
+    "slugify": "^1.6.6",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.1.0",
