--- a/4-natours/starter/package.json
+++ b/4-natours/starter/package.json
@@ -4,17 +4,22 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:prod": "cross-env NODE_ENV=production nodemon server.js",
+    "debug": "ndb server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongoose": "^8.10.0",
     "morgan": "^1.10.0",
-    "nodemon": "^3.1.9"
+    "ndb": "^1.1.5",
+    "nodemon": "^3.1.9",
+    "slugify": "^1.6.6",
+    "validator": "^13.12.0"
   }
 }
